@@ -7,7 +7,9 @@ pts-core: Add "auto-resolution-wide" option
 pts-core: Add $CPU_THREADS_PER_CORE helper
 pts-core: Allow perf-per-dollar-per-hour in the result viewer, extending perf-per-dollar HTML helper
 pts-core: Add PTS_EXTRA_SYSTEM_LOGS_DIR environment variable to allow pointing to directory of extra system log files
+pts-core: Add RepositoryURL option for test profiles
 phodevi: Intel Linux graphics string reporting improvement
+phoromatic: Treat set context scripts as a file rather than executing it as a buffer
 system_monitor: Adjust perf-per precision
 
 Phoronix Test Suite 10.4.0 Milestone 1
